--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/panda/miniconda3/envs/torch/bin/python"
+    "python.pythonPath": "C:\\Users\\panda\\anaconda3\\envs\\torch\\python.exe"
 }
